--- a/MoonBot/MoonBot.csproj
+++ b/MoonBot/MoonBot.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Command.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="IrcClient.cs" />
+    <Compile Include="JsonFollowersAnswer.cs" />
     <Compile Include="PingSender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
