--- a/MoonBot/MoonBot.csproj
+++ b/MoonBot/MoonBot.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Data.cs" />
     <Compile Include="IrcClient.cs" />
     <Compile Include="JsonFollowersAnswer.cs" />
+    <Compile Include="LaunchTimer.cs" />
     <Compile Include="PingSender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
