--- a/MoonBot/packages.config
+++ b/MoonBot/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.7" targetFramework="net472" />
   <package id="Serilog" version="2.3.0" targetFramework="net461" />
   <package id="Serilog.Extensions.Logging" version="2.0.2" targetFramework="net461" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net461" />
