--- a/Moonbot-Objects/Moonbot-Objects.csproj
+++ b/Moonbot-Objects/Moonbot-Objects.csproj
@@ -45,9 +45,11 @@
     <Compile Include="CommandO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwitchJsonAnswer\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
