--- a/Moonbot-Objects/Moonbot-Objects.csproj
+++ b/Moonbot-Objects/Moonbot-Objects.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwitchJsonAnswer\User.cs" />
+    <Compile Include="TwitchJsonAnswer\UserFollower.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
