--- a/Moonbot-Objects/Moonbot-Objects.csproj
+++ b/Moonbot-Objects/Moonbot-Objects.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Channel\ChannelO.cs" />
     <Compile Include="Command\CommandO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Team\TeamO.cs" />
     <Compile Include="User\FollowerO.cs" />
     <Compile Include="User\UserO.cs" />
   </ItemGroup>
