--- a/Moonbot-Objects/Moonbot-Objects.csproj
+++ b/Moonbot-Objects/Moonbot-Objects.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team\TeamO.cs" />
     <Compile Include="User\FollowerO.cs" />
+    <Compile Include="User\SubscriberO.cs" />
     <Compile Include="User\UserO.cs" />
   </ItemGroup>
   <ItemGroup />
