--- a/MoonBot/packages.config
+++ b/MoonBot/packages.config
@@ -17,6 +17,7 @@
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Security" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
@@ -37,5 +38,6 @@
   <package id="TwitchLib.Client.Enums" version="1.0.0" targetFramework="net461" />
   <package id="TwitchLib.Client.Models" version="1.0.0" targetFramework="net461" />
   <package id="TwitchLib.PubSub" version="2.0.3" targetFramework="net461" />
+  <package id="Websocket.Client" version="3.1.25" targetFramework="net472" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net461" />
 </packages>
