--- a/Moonbot-Objects/Moonbot_Objects.csproj
+++ b/Moonbot-Objects/Moonbot_Objects.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Channel\ChannelO.cs" />
     <Compile Include="Command\CommandO.cs" />
+    <Compile Include="Followage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team\TeamO.cs" />
     <Compile Include="User\FollowerO.cs" />
