--- a/Moonbot-Objects/Moonbot_Objects.csproj
+++ b/Moonbot-Objects/Moonbot_Objects.csproj
@@ -48,6 +48,7 @@
     <Compile Include="User\BroadCasterO.cs" />
     <Compile Include="Channel\ChannelO.cs" />
     <Compile Include="Command\CommandO.cs" />
+    <Compile Include="Followage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team\TeamO.cs" />
     <Compile Include="User\FollowerO.cs" />
